Load resources from URI instead of URL
This allows us to support other protocols formats in the future.